--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,7 @@
 
  <link rel="stylesheet" href="/css/user_profile.css">
  <h1>codeial / profile </h1>
+
+ <p>name:<%= user.name %></p>
+ <p>email:<%= user.email %></p>
+ <a href="/users/sign-out">Sign Out</a>
