--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,9 +1,9 @@
 <h1>sign in</h1>
 
 <form action="/users/create-session" method="post">
-<input type="email" name="email" id="" placeholder="email" required>
-<input type="password" name="password" id="" placeholder="password" required>
-<input type="submit" value="SignIn">
+<input type="email" name="email" id="email" placeholder="email" required>
+<input type="password" name="password" id="password" placeholder="password" required>
+<input type="submit" value="Signin">
 
 
 
