--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,9 +6,9 @@
 
     <h4>posts</h4>
     
-    <form action="" id="new-post-id" method="post">
+    <form action="/posts/create" id="new-post-id" method="post">
 
-        <textarea name="content" id="" cols="30" rows="3"></textarea>
+        <textarea name="content" id="" cols="30" rows="3" placeholder="Whats on your mind"></textarea>
         <input type="submit" value="Post">
 
 
