--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,8 @@
 <section id="feed-posts">
 
     <h4>posts</h4>
+
+    <%if (locals.user)%>
     
     <form action="/posts/create" id="new-post-id" method="post">
 
