--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,26 +5,63 @@
 <section id="feed-posts">
 
     <h4>posts</h4>
+    <% if (locals.user){%>
 
+      
+        
     
     <form action="/posts/create" id="new-post-id" method="post">
 
         <textarea name="content" id="" cols="30" rows="3" placeholder="Whats on your mind"></textarea>
         <input type="submit" value="Post">
 
-
+       
     </form>
-
+  <%}%>
     <div id="post-list-container">
         <ul>
-            <% for(posts of posts){%>
+            <% for(post of posts){%>
 
-                <li>
-                    <%= posts.content %>
+                <li><p>
+                    <%= post.content %>
                     <br>
                     <small>
-                        <%= posts.user.name %>
+                        <%= post.user.name %>
                     </small>
+                </p>
+                <div class="post-comments">
+                    <% if (locals.user){%>
+                        
+
+                        <form action="/comments/create" method="post">
+                        <input type="text" name="content" placeholder="add a comment" required>
+                        <input type="hidden" name="post" value="<%=post._id %>">
+                        <input type="submit" value="comment">
+
+
+                        
+                    </form>
+                    <%}%>
+
+                    <div class="post-comments-lists">
+                        <ul id="post-comments<%= post._id %>">
+                            <%for (comment of post.comments){%>
+                                <p>
+                                    <%= comment.content %>
+                                    <br>
+                                    <small>
+                                        <%= comment.user.name %>
+                                    </small>
+                                </p>
+                                
+                                
+                                
+                                <%}%>
+
+                        </ul>
+
+                    </div>
+                </div>
                 </li>
 
         <% }%>
